# rust-rcli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  deny.toml  test.rest
fixture/: b64_standard.txt  b64_urlsafe.txt  blake3.txt  chacha20.txt  ed25519.pk  ed25519.sk
fixtures/: blake3.txt  chacha20.txt  ed25519.pk  ed25519.sk  text_key.txt
src/: cli.rs  csv_process.rs  lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: b64.rs  csv.rs  gen_pass.rs  http.rs  jwt.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  jwt.rs  mod.rs  text.rs
templates/: index.html
