[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Manonloki"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.5", features = ["http2", "macros"] }
base64 = "0.22.0"
blake3 = "1.5.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
enum_dispatch = "0.3.13"
fancy-duration = { version = "0.9.2", features = ["chrono"] }
jsonwebtoken = "9.3.0"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.34"
tera = "1.19.1"
tokio = { version = "1.37.0", features = ["fs", "macros", "net", "rt", "rt-multi-thread"] }
toml = "0.8.12"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zxcvbn = "2.2.2"
